tests/programs/a1/local/invalid/static_initializers.java
public class static_initializers {
  public static int x;
  static {
    x = 42;
  }
}